[gd_scene load_steps=4 format=3 uid="uid://sfvur5wu524h"]

[ext_resource type="Script" uid="uid://biuwlf3gncn8r" path="res://scenes/ui/card_rewards.gd" id="1_chmpv"]
[ext_resource type="PackedScene" uid="uid://dbrkhr76xq5ki" path="res://scenes/ui/card_super_detail_ui.tscn" id="2_cak6g"]
[ext_resource type="PackedScene" uid="uid://cmndbgancqt71" path="res://scenes/ui/card_detail_overlay.tscn" id="2_chmpv"]

[node name="CardRewards" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.823529)
script = ExtResource("1_chmpv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -27.0
offset_right = 59.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Cards" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="CardSuperDetailUI" parent="VBoxContainer/Cards" instance=ExtResource("2_cak6g")]
layout_mode = 2

[node name="CardSuperDetailUI2" parent="VBoxContainer/Cards" instance=ExtResource("2_cak6g")]
layout_mode = 2

[node name="CardSuperDetailUI3" parent="VBoxContainer/Cards" instance=ExtResource("2_cak6g")]
layout_mode = 2

[node name="SkipButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 28)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -46.0
offset_right = 50.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Skip"

[node name="CardDetailOverlay" parent="." instance=ExtResource("2_chmpv")]
visible = false
layout_mode = 1
background_color = Color(0.101961, 0.101961, 0, 0.929412)

[node name="TakeButton" type="Button" parent="CardDetailOverlay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 28)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -56.0
offset_right = 50.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
text = "Take"
